@@ -74,6 +74,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Increase the contrast between the rich text / StreamField block picker and the page in dark mode (Albina Starykova)
  * Purge revisions of non-page models in `purge_revisions` command (Sage Abdullah)
  * Change the default WebP quality to 80 to match AVIF (Aman Pandey)
+ * Adopt optimised Wagtail logo in the admin interface (Albina Starykova)
 
 ### Bug fixes
 
