@@ -7,7 +7,7 @@
         <div class="w-w-full w-h-full w-max-w-6xl w-mx-auto w-flex w-items-center w-justify-center">
             {% block branding_logo %}
                 <div class="page404__logo w-hidden sm:w-block">
-                    <img src="{% versioned_static 'wagtailadmin/images/wagtail-logo.svg' %}" alt=""/>
+                    {% include "wagtailadmin/logo.html" %}
                 </div>
             {% endblock %}
 
